Changes from 2.5.4 to 2.5.5
---------------------------


Changes from 2.5.3 to 2.5.4
---------------------------

** Bug
    * [FELIX-4556] - Maven Bundle Plugin fails with ArrayIndexOutOfBoundsException, "Invalid Class File" errors with Java 8 features
    * [FELIX-4659] - The maven bundle plugin incorrectly reports cardinality on service references in the generated generic requirements
    * [FELIX-4817] - Baseline plugin is not thread safe
    * [FELIX-4679] - Import package not generated for the classes used in throw clause in a private method.

** Improvement
    * [FELIX-4666] - The baseline goal should print out the resolved version used for comparison
    * [FELIX-4824] - Add support for prepending instructions


Changes from 2.5.2 to 2.5.3
---------------------------

** Bug
    * [FELIX-4619] - Debug output of project properties


Changes from 2.5.0 to 2.5.2
---------------------------

** Bug
    * [FELIX-4574] - The maven-bundle-plugin only generates Provide-/Require-Capabilities for SCR if version is 1.1.0
    * [FELIX-4576] - Bad Require-Capability generation when the SCR target filter has no parentheses

** Improvement
    * [FELIX-4596] - Passing configuration values to the maven-bundle-plugin

** New Feature
    * [FELIX-4591] - add the ability to specify the classifier in the new baseline configuration of the plugin.


Changes from 2.4.0 to 2.5.0
---------------------------

** Improvement
    * [FELIX-3381] - Support for {maven-test-resources} and {maven-test-sources} placeholders
    * [FELIX-4205] - "null" Bundle-Activator causes bundle to fail
    * [FELIX-4518] - Provide a way to disable some plugins
    * [FELIX-4539] - Update to Bndlib 2.3.0

** New Feature
    * [FELIX-3462] - Nicer Manifest formatting
    * [FELIX-4512] - Add a new Mojo to invoke the BND Baseline tool
    * [FELIX-4517] - Generate generic capabilities and requirements for services from blueprint and scr descriptors

Changes from 2.3.7 to 2.4.0
---------------------------